--- a/src/component/Landing/Landing.css
+++ b/src/component/Landing/Landing.css
@@ -36,8 +36,9 @@
 ::-webkit-scrollbar-thumb{
 	background: linear-gradient(
 		45deg,
-		#06dee1,
-		#79ff6c
+		#00FFA3,
+		#03E1FF,
+		#DC1FFF
 	);
 	border-radius: 3px;
 }
