--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,17 @@
 .App {
-  text-align: center;
-  background-color: rgba(0, 0, 0, 0.884);
-  color: aliceblue;
+	text-align: center;
+	background-color: rgba(0, 0, 0, 0.884);
+	color: aliceblue;
+}
+
+::-webkit-scrollbar {
+	width: 13px;
+}
+::-webkit-scrollbar-track {
+	border: 7px solid #232943;
+	box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+}
+::-webkit-scrollbar-thumb {
+	background: linear-gradient(45deg, #00ffa3, #03e1ff, #dc1fff);
+	border-radius: 3px;
 }
