--- a/src/component/certificate/Certificate.css
+++ b/src/component/certificate/Certificate.css
@@ -2,9 +2,7 @@
 	margin-top: 100px;
 	padding: 50px 0px;
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+	flex-grow: 1;
 	background: linear-gradient(
 		135deg,
 		hsla(158, 100%, 50%, 1) 0%,
@@ -25,26 +23,26 @@
 
 .form-container {
 	display: flex;
-	height: auto;
-	width: 98vw;
+	flex-direction: row;
+	flex-grow: 1;
+	border: 1px solid black;
 }
 
 .form {
-	width: 50%;
-	border: 1px solid black;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+	border: 2px solid purple;
+	width: 40%;
 }
 
 #form {
-	width: 90%;
+	background-color: rgba(240, 248, 255, 0.432);
+	box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.3);
+	margin: 40px;
+	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	border-radius: 20px;
-	height: 60vh;
+	height: 450px;
 }
 
 @supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
@@ -56,9 +54,9 @@
 
 input {
 	background-color: rgba(0, 0, 0, 0.795);
-	background-blend-mode: difference;
 	color: white;
 	border: none;
+	width: 250px;
 	padding: 10px 15px;
 	margin: 10px;
 	border-radius: 10px;
@@ -66,7 +64,7 @@ input {
 }
 
 #downloadWrapper {
-	width: 50%;
+	width: 60%;
 	border: 1px solid black;
 	display: flex;
 	justify-content: center;
@@ -74,43 +72,94 @@ input {
 }
 
 #certificateWrapper {
-	box-shadow: 0 0 5px #000;
-	border-radius: 10px;
+	box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.3);
+	border-radius: 5px;
 	overflow: hidden;
 	position: relative;
 }
+
 #certificateWrapper img {
 	display: block;
-	height: 400px;
+	height: 450px;
 	width: auto;
 }
 
 #certificateWrapper p {
-	margin: 0;
+	color: #000;
 	position: absolute;
-	left: 90px;
-	top: 130px;
-	font-size: 20pt;
+	margin: 0;
+	text-align: center;
+	align-items: center;
+	font-size: 20px;
 }
 
-@media screen and (max-width: 1025px) {
-	.form-container {
-		flex-direction: column;
-		height: fit-content;
-	}
-	
-	.form,
-	#downloadWrapper {
-		width: 100%;
-	}
-
-	#certificateWrapper img {
-		width: 70vw;
-		height: auto;
-	}
+#certificateWrapper #husband {
+	left: 45%;
+	top: 31%;
 }
+
+#certificateWrapper #wife {
+	left: 45%;
+	top: 47%;
+}
+#certificateWrapper #date {
+	left: 75%;
+	top: 73%;
+}
+
 
 .sub-text {
 	color: #000;
 	font-weight: bold;
+}
+
+@media screen and (max-width: 1025px) {
+	.certificate-container {
+		flex-direction: column;
+		height: fit-content;
+	}
+
+	.form,
+	#downloadWrapper {
+		width: 100%;
+	}
+}
+
+@media screen and (max-width: 650px) {
+	#certificateWrapper img {
+		width: 400px;
+		height: auto;
+	}
+
+	#form {
+		margin: 30px;
+	}
+
+	#certificateWrapper p {
+		font-size: 15px
+	}
+}
+
+@media screen and (max-width: 450px) {
+	#certificateWrapper img {
+		width: 300px;
+		height: auto;
+	}
+
+	#certificateWrapper p {
+		font-size: 12px
+	}
+
+	input {
+		width: 200px;
+		padding: 8px 13px;
+		margin: 8px;
+		border-radius: 6px;
+		font-size: 15px;
+	}
+
+	#form {
+		margin: 20px;
+		height: 400px;
+	}
 }
