--- a/src/component/wallet/WalletAdapter.css
+++ b/src/component/wallet/WalletAdapter.css
@@ -1,30 +1,31 @@
 .WalletAdapter {
-  padding: 8px;
-  margin-left: auto;
-  margin-right: auto;
-  line-height: 1.7;
+	padding: 8px;
+	margin-left: auto;
+	margin-right: auto;
+	line-height: 1.7;
 }
 
 .Wallet {
-  display: flex;
-  justify-content: flex-end;
+	display: flex;
+	justify-content: flex-end;
 }
 
 h1 {
-  margin-top: 60px;
+	margin-top: 60px;
 }
 
 h1 #main {
-  font-size: larger;
+	font-size: larger;
 }
 
 .logs {
-  word-break: break-all;
+	word-break: break-all;
 }
 
-select, option {
-  background-color: rgba(0, 207, 180, 0.795);
-  width: 200px;
+select,
+option {
+	background-color: rgba(0, 207, 180, 0.795);
+	width: 200px;
 	color: rgb(34, 34, 34);
 	border: none;
 	padding: 10px 15px;
@@ -32,4 +33,12 @@ select, option {
 	border-radius: 10px;
 	font-size: 18px;
 	box-shadow: 0 0 10px 1px rgba(255, 106, 106, 0.425);
+}
+
+#send-btn {
+	position: fixed;
+	display: inline-block;
+	top: 60px;
+	right: 10px;
+	transition: all;
 }
