--- a/src/component/explorer/Explorer.css
+++ b/src/component/explorer/Explorer.css
@@ -12,8 +12,7 @@
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
 	box-shadow: inset 120px 0px rgba(0, 0, 0, 0.363),
-		inset 80px 0px rgba(0, 0, 0, 0.363), 
-		inset 50px 0px rgba(0, 0, 0, 0.358),
+		inset 80px 0px rgba(0, 0, 0, 0.363), inset 50px 0px rgba(0, 0, 0, 0.358),
 		inset -120px 0px rgba(0, 0, 0, 0.363),
 		inset -80px 0px rgba(0, 0, 0, 0.363),
 		inset -50px 0px rgba(0, 0, 0, 0.358),
@@ -102,5 +101,95 @@ input {
 	input {
 		font-size: 14px;
 		margin: 1px;
+	}
+}
+
+/* certificate  */
+
+.cert-container {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+}
+
+#downloadWrapper {
+	width: 100%;
+	height: 100%;
+	border: 1px solid black;
+	display: flex;
+	margin-top: 20px;
+	flex-direction: column;
+	height: fit-content;
+	justify-content: center;
+	align-items: center;
+	width: 400px;
+}
+
+#certificateWrapper {
+	box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.3);
+	border-radius: 5px;
+	overflow: hidden;
+	position: relative;
+}
+
+#certificateWrapper img {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+#certificateWrapper p {
+	color: #000;
+	position: absolute;
+	margin: 0;
+	text-align: left;
+	align-items: center;
+	font-size: 20px;
+}
+
+#certificateWrapper #husband {
+	left: 35%;
+	top: 31%;
+}
+
+#certificateWrapper #wife {
+	left: 35%;
+	top: 47%;
+}
+#certificateWrapper #date {
+	left: 75%;
+	top: 73%;
+}
+
+#certificateWrapper #QR {
+	top : 35%;
+	left: 80%;
+}
+
+img {
+	width: 40px;
+	height: 40px;
+}
+
+@media screen and (max-width: 650px) {
+	#certificateWrapper img {
+		width: 350px;
+		height: auto;
+	}
+
+	#certificateWrapper p {
+		font-size: 15px;
+	}
+}
+
+@media screen and (max-width: 450px) {
+	#certificateWrapper img {
+		width: 280px;
+		height: auto;
+	}
+
+	#certificateWrapper p {
+		font-size: 12px;
 	}
 }
