--- a/src/component/explorer/Explorer.css
+++ b/src/component/explorer/Explorer.css
@@ -111,31 +111,28 @@ input {
 	justify-content: center;
 	flex-direction: column;
 	align-items: center;
+	margin-top: 20px;
 }
 
 #downloadWrapper {
-	width: 100%;
-	height: 100%;
+	width: max-content;
 	border: 1px solid black;
 	display: flex;
-	margin-top: 20px;
 	flex-direction: column;
 	height: fit-content;
 	justify-content: center;
 	align-items: center;
-	width: 400px;
-}
-
-#certificateWrapper {
-	box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.3);
-	border-radius: 5px;
-	overflow: hidden;
 	position: relative;
 }
 
+#certificateWrapper {
+	border-radius: 5px;
+	overflow: hidden;
+}
+
 #certificateWrapper img {
-	display: block;
-	width: 100%;
+	box-shadow: 0px 0px 15px 1px rgba(0, 0, 0, 0.3);
+	width: max-content;
 	height: auto;
 }
 
