--- a/src/component/Profile/card/ProfileCard.css
+++ b/src/component/Profile/card/ProfileCard.css
@@ -36,3 +36,14 @@ p {
 	width: 180px;
 	padding: 4px;
 }
+
+.profile-card{
+	-webkit-filter: blur(3px);
+	filter: blur(3px);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+}
+.profile-card:hover{
+	-webkit-filter: blur(0);
+	filter: blur(0);
+}
